--- a/OpenTableRobots.csproj
+++ b/OpenTableRobots.csproj
@@ -30,10 +30,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Robot.cs" />
+    <Compile Include="Direction.cs" />
+    <Compile Include="Grid.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="ConfigParser.cs" />
+    <Compile Include="Battle.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Mission.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
