Renamed top-level solution and projects to be less specific.

--- a/RobotsTest/RobotsTest.csproj
+++ b/RobotsTest/RobotsTest.csproj
@@ -40,9 +40,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\OpenTableRobots.csproj">
+    <ProjectReference Include="..\Robots.csproj">
       <Project>{4412CFAC-D7D5-448C-825D-44F9DB8E5CB9}</Project>
-      <Name>OpenTableRobots</Name>
+      <Name>Robots</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
