--- a/Robots.csproj
+++ b/Robots.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{4412CFAC-D7D5-448C-825D-44F9DB8E5CB9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>OpenTableRobots</RootNamespace>
-    <AssemblyName>OpenTableRobots</AssemblyName>
+    <AssemblyName>Robots</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
